# busibox

./: .cursorrules  .gitignore  CLAUDE.md  Makefile  QUICKSTART.md  README.md  TESTING.md  docker-compose.dev.yml  docker-compose.github.yml  docker-compose.local-dev-legacy.yml  docker-compose.local-dev.yml  docker-compose.local.yml  docker-compose.original-dev.yml  docker-compose.prod.yml  docker-compose.yml  env.local.example  test-infrastructure.sh
config/: init-databases.sql  install-messages.json  litellm-config.yaml  nginx-bootstrap.conf  nginx-bundled.conf  nginx-local.conf
dev-apps/: README.md
docs/: LOCAL_DEVELOPMENT.md
k8s/: README.md
openapi/: agent-api.yaml  authz-api.yaml  data-api.yaml
provision/: setup.sh
scripts/: bootstrap-test-credentials.sh  check-all-services.sh  check-deployments.sh  check-document-status.sh  (+17 more)
srv/voice-agent/: Dockerfile  README.md  pyproject.toml  requirements.txt
srv/voice-agent/src/: __init__.py  main.py
srv/voice-agent/src/agents/: __init__.py  coach_agent.py  conversation_agent.py  ivr_navigator.py
srv/voice-agent/src/api/: __init__.py  calls.py  coach.py  transcripts.py  websocket.py
srv/voice-agent/src/config/: settings.py
srv/voice-agent/src/models/: __init__.py  call_state.py  transcript.py
srv/voice-agent/src/services/: __init__.py  audio_processor.py  call_manager.py  detector.py  freeswitch_client.py  speech_synthesis.py  transcript_store.py  transcription.py  vad.py  webrtc_bridge.py
srv/voice-agent/tests/: __init__.py  conftest.py
srv/voice-agent/tests/unit/: test_api.py  test_call_state.py
(+985 files in other folders)
